; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_kvm.c_kvm_mmu_op.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_kvm.c_kvm_mmu_op.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KVM_HC_MMU_OP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @kvm_mmu_op to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @kvm_mmu_op(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  br label %8

8:                                                ; preds = %23, %2
  %9 = load i8*, i8** %3, align 8
  %10 = call i64 @__pa(i8* %9)
  store i64 %10, i64* %6, align 8
  store i64 0, i64* %7, align 8
  %11 = load i32, i32* @KVM_HC_MMU_OP, align 4
  %12 = load i32, i32* %4, align 4
  %13 = load i64, i64* %6, align 8
  %14 = load i64, i64* %7, align 8
  %15 = call i32 @kvm_hypercall3(i32 %11, i32 %12, i64 %13, i64 %14)
  store i32 %15, i32* %5, align 4
  %16 = load i32, i32* %5, align 4
  %17 = load i8*, i8** %3, align 8
  %18 = sext i32 %16 to i64
  %19 = getelementptr i8, i8* %17, i64 %18
  store i8* %19, i8** %3, align 8
  %20 = load i32, i32* %5, align 4
  %21 = load i32, i32* %4, align 4
  %22 = sub i32 %21, %20
  store i32 %22, i32* %4, align 4
  br label %23

23:                                               ; preds = %8
  %24 = load i32, i32* %4, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %8, label %26

26:                                               ; preds = %23
  ret void
}

declare dso_local i64 @__pa(i8*) #1

declare dso_local i32 @kvm_hypercall3(i32, i32, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
